assignment1/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'bool'", "'('", "')'", "'['", "']'", 
                     "'.'", "','", "';'", "':'", "'{'", "'}'", "'array'", 
                     "'auto'", "'boolean'", "'break'", "'continue'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'inherit'", "'integer'", "'of'", "'out'", 
                     "'return'", "'string'", "'true'", "'void'", "'while'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "'=='" ]

    symbolicNames = [ "<INVALID>", "INT_LIT", "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", 
                      "BOOL", "LB", "RB", "LSB", "RSB", "DOT", "COMMA", 
                      "SEMI", "COLON", "LCB", "RCB", "ARRAY", "AUTO", "BOOLEAN", 
                      "BREAK", "CONTINUE", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNC", "IF", "INHERIT", "INT", "OF", "OUT", 
                      "RETURN", "STR", "TRUE", "VOID", "WHILE", "ID", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", "EQ", 
                      "NOTEQ", "LT", "LTEQ", "GT", "GTEQ", "COLONCOLON", 
                      "EQEQ", "WS", "BlockComment", "LINE_CMT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_arr_type = 2
    RULE_list_type = 3
    RULE_para = 4
    RULE_para_list = 5
    RULE_func_decl = 6
    RULE_func_call = 7
    RULE_stmt = 8
    RULE_block_stmt = 9
    RULE_if_stmt = 10
    RULE_for_stmt = 11
    RULE_while_stmt = 12
    RULE_do_while_stmt = 13
    RULE_break_stmt = 14
    RULE_continue_stmt = 15
    RULE_return_stmt = 16
    RULE_call_stmt = 17
    RULE_expr_list = 18
    RULE_expr = 19
    RULE_relation_expr = 20
    RULE_logic_expr = 21
    RULE_add_expr = 22
    RULE_mul_expr = 23
    RULE_not_expr = 24
    RULE_sign_expr = 25
    RULE_exp8 = 26
    RULE_exp9 = 27
    RULE_operand = 28
    RULE_index_operators = 29
    RULE_array = 30
    RULE_literal_element = 31
    RULE_literal = 32
    RULE_id_arr = 33

    ruleNames =  [ "program", "var_decl", "arr_type", "list_type", "para", 
                   "para_list", "func_decl", "func_call", "stmt", "block_stmt", 
                   "if_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "call_stmt", 
                   "expr_list", "expr", "relation_expr", "logic_expr", "add_expr", 
                   "mul_expr", "not_expr", "sign_expr", "exp8", "exp9", 
                   "operand", "index_operators", "array", "literal_element", 
                   "literal", "id_arr" ]

    EOF = Token.EOF
    INT_LIT=1
    FLOAT_LIT=2
    BOOL_LIT=3
    STRING_LIT=4
    BOOL=5
    LB=6
    RB=7
    LSB=8
    RSB=9
    DOT=10
    COMMA=11
    SEMI=12
    COLON=13
    LCB=14
    RCB=15
    ARRAY=16
    AUTO=17
    BOOLEAN=18
    BREAK=19
    CONTINUE=20
    DO=21
    ELSE=22
    FALSE=23
    FLOAT=24
    FOR=25
    FUNC=26
    IF=27
    INHERIT=28
    INT=29
    OF=30
    OUT=31
    RETURN=32
    STR=33
    TRUE=34
    VOID=35
    WHILE=36
    ID=37
    ADD=38
    SUB=39
    MUL=40
    DIV=41
    MOD=42
    NOT=43
    AND=44
    OR=45
    EQ=46
    NOTEQ=47
    LT=48
    LTEQ=49
    GT=50
    GTEQ=51
    COLONCOLON=52
    EQEQ=53
    WS=54
    BlockComment=55
    LINE_CMT=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Var_declContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Var_declContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.SEMI)
            else:
                return self.getToken(MT22Parser.SEMI, i)

        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Func_declContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Func_declContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.var_decl()
                    self.state = 69
                    self.match(MT22Parser.SEMI)
                    pass

                elif la_ == 2:
                    self.state = 71
                    self.func_decl()
                    pass


                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 76
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arr_type(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typeContext,0)


        def list_type(self):
            return self.getTypedRuleContext(MT22Parser.List_typeContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(MT22Parser.ID)
                self.state = 79
                self.match(MT22Parser.COMMA)
                self.state = 80
                self.var_decl()
                self.state = 81
                self.match(MT22Parser.COMMA)
                self.state = 82
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(MT22Parser.ID)
                self.state = 85
                self.match(MT22Parser.COLON)
                self.state = 86
                self.arr_type()
                self.state = 87
                self.list_type()
                self.state = 88
                self.match(MT22Parser.EQ)
                self.state = 89
                self.expr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(MT22Parser.ID)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 92
                    self.match(MT22Parser.COMMA)
                    self.state = 93
                    self.match(MT22Parser.ID)
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self.match(MT22Parser.COLON)
                self.state = 100
                self.arr_type()
                self.state = 101
                self.list_type()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.match(MT22Parser.ID)
                self.state = 104
                self.match(MT22Parser.EQ)
                self.state = 105
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INT_LIT)
            else:
                return self.getToken(MT22Parser.INT_LIT, i)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_arr_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_type" ):
                return visitor.visitArr_type(self)
            else:
                return visitor.visitChildren(self)




    def arr_type(self):

        localctx = MT22Parser.Arr_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arr_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ARRAY:
                self.state = 108
                self.match(MT22Parser.ARRAY)
                self.state = 109
                self.match(MT22Parser.LSB)
                self.state = 110
                self.match(MT22Parser.INT_LIT)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 111
                    self.match(MT22Parser.COMMA)
                    self.state = 112
                    self.match(MT22Parser.INT_LIT)
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 118
                self.match(MT22Parser.RSB)
                self.state = 119
                self.match(MT22Parser.OF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STR(self):
            return self.getToken(MT22Parser.STR, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_list_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_type" ):
                return visitor.visitList_type(self)
            else:
                return visitor.visitChildren(self)




    def list_type(self):

        localctx = MT22Parser.List_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_list_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INT) | (1 << MT22Parser.STR) | (1 << MT22Parser.VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arr_type(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typeContext,0)


        def list_type(self):
            return self.getTypedRuleContext(MT22Parser.List_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = MT22Parser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 124
                self.match(MT22Parser.INHERIT)


            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 127
                self.match(MT22Parser.OUT)


            self.state = 130
            self.match(MT22Parser.ID)
            self.state = 131
            self.match(MT22Parser.COLON)
            self.state = 132
            self.arr_type()
            self.state = 133
            self.list_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ParaContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ParaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_para_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_list" ):
                return visitor.visitPara_list(self)
            else:
                return visitor.visitChildren(self)




    def para_list(self):

        localctx = MT22Parser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INHERIT) | (1 << MT22Parser.OUT) | (1 << MT22Parser.ID))) != 0):
                self.state = 135
                self.para()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 136
                    self.match(MT22Parser.COMMA)
                    self.state = 137
                    self.para()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNC(self):
            return self.getToken(MT22Parser.FUNC, 0)

        def arr_type(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typeContext,0)


        def list_type(self):
            return self.getTypedRuleContext(MT22Parser.List_typeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def para_list(self):
            return self.getTypedRuleContext(MT22Parser.Para_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MT22Parser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MT22Parser.ID)
            self.state = 146
            self.match(MT22Parser.COLON)
            self.state = 147
            self.match(MT22Parser.FUNC)
            self.state = 148
            self.arr_type()
            self.state = 149
            self.list_type()
            self.state = 150
            self.match(MT22Parser.LB)
            self.state = 151
            self.para_list()
            self.state = 152
            self.match(MT22Parser.RB)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 153
                self.match(MT22Parser.INHERIT)
                self.state = 154
                self.match(MT22Parser.ID)


            self.state = 157
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def expr_list(self):
            return self.getTypedRuleContext(MT22Parser.Expr_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = MT22Parser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MT22Parser.ID)
            self.state = 160
            self.match(MT22Parser.LB)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INT_LIT) | (1 << MT22Parser.FLOAT_LIT) | (1 << MT22Parser.BOOL_LIT) | (1 << MT22Parser.STRING_LIT) | (1 << MT22Parser.LB) | (1 << MT22Parser.LCB) | (1 << MT22Parser.ID) | (1 << MT22Parser.SUB) | (1 << MT22Parser.NOT))) != 0):
                self.state = 161
                self.expr_list()


            self.state = 164
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def if_stmt(self):
            return self.getTypedRuleContext(MT22Parser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MT22Parser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MT22Parser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Do_while_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Call_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(MT22Parser.LB)
                self.state = 167
                self.expr()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.RB:
                    self.state = 168
                    self.match(MT22Parser.RB)


                self.state = 171
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.for_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                self.do_while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 177
                self.break_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 178
                self.continue_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 179
                self.return_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 180
                self.call_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 181
                self.block_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 182
                self.expr()
                self.state = 183
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.StmtContext)
            else:
                return self.getTypedRuleContext(MT22Parser.StmtContext,i)


        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Var_declContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Var_declContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.SEMI)
            else:
                return self.getToken(MT22Parser.SEMI, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_block_stmt

        def accept(self, visitor:ParseTreeVisitor):
